# tcl-cmake

./: CMakeLists.txt  README.md
tcl/win/: tcl.dsp  tclsh.rc
